changes in html

--- a/account-validator/WebContent/LoanForm.html
+++ b/account-validator/WebContent/LoanForm.html
@@ -54,11 +54,11 @@ h3{
 </head>
 <body>
 
-<h2>Request</h2>
+<h2>Request</h2>                                      
 <h2>Response</h2>
 
 <div style : "display:inline-block;">
-<div id="rcorners2" style = "width:590px;height:550px;border-
+<div id="rcorners2" style = "width:490px;height:550px;border-
 radius:5px;background-color: #f2f2f2;display : inline-block;">
 
 <h3>Borrower</h3>
@@ -91,20 +91,12 @@ radius:5px;background-color: #f2f2f2;display : inline-block;">
   </form>
 </div>
 
-<div id="rcorners2" style = "width:590px;height:550px;border-
+<div id="rcorners2" style = "position: fixed;left:620px;width:490px;height:550px;border-
 radius:5px;background-color: #f2f2f2;display : inline-block;">
 
 <h3>Loan</h3>
 
 <form action="/action_page.php">
-	<!--<label style="width:100%;" for="name">Name</label>
-	<input type="text" id = "name" name = "Name" style = "width:100%;">
-	
-	<label style="width:49%;" for="credit_score">Credit Score</label>
-    <label style="width:49%;" for="yearly_icome">Yearly Income</label>
-    <input type="text" id="credit_score" name="Credit Score">
-
-    <input type="text" id="yearly_income" name="Yearly Income-->
     <label style="width:49%;" for="amount">Amount</label>
     <label style="width:49%;" for="duration">Duration</label>
     <input type="text" id="amount" name="Amount">
